* LootChest saves LootTable * ArgumentCheck on Value Input * Splitting * I lost track of it